tests/ui/impl-trait/precise-capturing/apit.stderr
warning: the feature `precise_capturing` is incomplete and may not be safe to use and/or cause compiler crashes
  --> $DIR/apit.rs:1:12
   |
LL | #![feature(precise_capturing)]
   |            ^^^^^^^^^^^^^^^^^
   |
   = note: see issue #123432 <https://github.com/rust-lang/rust/issues/123432> for more information
   = note: `#[warn(incomplete_features)]` on by default

error: `use<...>` precise capturing syntax not allowed on argument-position `impl Trait`
  --> $DIR/apit.rs:4:26
   |
LL | fn hello(_: impl Sized + use<>) {}
   |                          ^^^^^

error: aborting due to 1 previous error; 1 warning emitted

